k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  labels:
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: demo
spec:
  type: ClusterIP
  selector:
    app: demo-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
